# mcp-cursor-profiles

./: .gitignore  README.md  cursor_profiles_mcp.py  pyproject.toml
mcp_cursor_profiles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
