[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cursor-profiles"
version = "1.0.0"
description = "MCP server for managing Cursor profiles"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
cursor-profiles-mcp = "cursor_profiles_mcp:main"
